# lecture

./: .gitignore
lec10-dynamic-memory/: dynamic.c  function-pointers.c
lec11-debugging/: debugging.c
lec12-structs/: point.c
lec13-modules/: Guards.c  Makefile  Rational.c  Rational.h  demo.c
lec14-make/: .gitignore  Guards.c  Guards.h  Makefile  Path.c  Path.h  Point.c  Point.h  main.c
lec15-testing/include/: copy.h
lec15-testing/src/: copy.c
lec15-testing/support/test/unit/: GoogleTestLists.txt.in
lec15-testing/test/unit/: .ycm_extra_conf.py
lec15/testing/: .gitignore  .ycm_extra_conf.py  Makefile
lec15/testing/src/: main.c
lec15/testing/support/test/integration/: make.sh  preamble.bash
lec15/testing/support/test/unit/: make.sh
lec15/testing/test/integration/: default.bats
lec15/testing/test/unit/: copy.cpp
lec15/vim/: lyrics.txt  numbers.txt
lec16-vec/: Makefile
lec16-vec/include/: Guards.h  Vec.h
lec16-vec/src/: Guards.c  Vec.c  main.c
lec16-vec/support/test/unit/: CMakeLists.txt
lec16-vec/test/integration/: default.bats
lec16-vec/test/unit/: Vec.cpp
lec18-lexical/: .gitignore  Makefile  tokens.c
lec20-parser/: Makefile
lec20-parser/include/: CharItr.h  Guards.h  Node.h  Parser.h  Scanner.h  Slice.h  Token.h
lec20-parser/src/: CharItr.c  Guards.c  Node.c  Parser.c  Scanner.c  Slice.c  hello.c  main.c
lec21-file-io/: cat.c
lec21-file-io/file-demo/: input.txt
